# beaconpy

./: .gitignore  LICENSE  Makefile  README.md  beaconpy.py  main.py  pyproject.toml  setup.py  test_beacon.py
beaconpy/: __init__.py  beacon.py
test/: test_beacon.py
