[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beaconpy"
version = "0.1.0"
description = "A Pythonic implementation of the observer pattern"
readme = "README.md"
authors = [
    {name = "Fernando"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/yourusername/beaconpy"
"Bug Tracker" = "https://github.com/yourusername/beaconpy/issues"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
